--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "CeloCharityApp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://gungz.github.io/celo-charity-campaign",
   "dependencies": {
     "@celo/contractkit": "^1.0.2",
     "bignumber.js": "^9.0.1",
@@ -16,6 +17,8 @@
     "web3": "^1.6.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "PORT=8080 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
